// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appointments Component should create an appointment 1`] = `Promise {}`;

exports[`Appointments Component should not create an appointment 1`] = `
<button
  class="btn"
  type="submit"
>
  Book Now
</button>
`;

exports[`Appointments Component should render input date 1`] = `
<input
  class="form-child"
  placeholder="Select date"
  required=""
  type="date"
  value=""
/>
`;

exports[`Appointments Component should render input text 1`] = `
<input
  class="form-child"
  placeholder="City"
  required=""
  type="text"
  value=""
/>
`;

exports[`Appointments Component should render select tag 1`] = `
<select
  class="form-child"
  required=""
>
  <option
    disabled=""
    value=""
  >
    Billionaires List
  </option>
  <option
    value="1"
  >
    Elon Musk
  </option>
  <option
    value="2"
  >
    Jeff Bezos
  </option>
  <option
    value="3"
  >
    Ariel Camus
  </option>
  <option
    value="4"
  >
    Julia Koch
  </option>
  <option
    value="5"
  >
    Alice Walton
  </option>
  <option
    value="6"
  >
    Jack Ma
  </option>
  <option
    value="7"
  >
    Francoise Meyers
  </option>
  <option
    value="8"
  >
    Changpeng Zhao
  </option>
  <option
    value="9"
  >
    Mark Zuckerberg
  </option>
  <option
    value="10"
  >
    Bill Gates
  </option>
</select>
`;

exports[`Appointments Component should render submit button 1`] = `
<button
  class="btn"
  type="submit"
>
  Book Now
</button>
`;

exports[`Appointments Component should render welcome text 1`] = `
<h1
  class="heading"
>
  BOOK A BILLIONAIRE
</h1>
`;
